Add track parsing

--- a/Cataloguer/Views/Home/Album.cshtml
+++ b/Cataloguer/Views/Home/Album.cshtml
@@ -5,7 +5,9 @@
 }
 
 <div class="row">
-    <div class="col-sm-4 col-md-4 col-lg-4"><img width="100%" class="img-thumbnail" src="@Model.PictureLink" /></div>
+    <div class="col-sm-4 col-md-4 col-lg-4">
+        <img width="100%" class="img-thumbnail" src="@Model.GetPictureLink()" />
+    </div>
     <div class="col-sm-8 col-md-8 col-lg-8">
         <h1 class="text-center">@Model.Name</h1>
         <h5>
@@ -16,8 +18,8 @@
         </h5>
         <h4>Artist : @Html.ActionLink(Model.Artist.Name, "ArtistProfile", "Home", 
                     new { name = Model.Artist.Name }, new { })</h4>
-        <h4>Scrobbles : @Model.Scrobbles</h4>
-        <h4>Listeners : @Model.Listeners</h4>
+        <h4>Scrobbles : @Model.GetScrobbles()</h4>
+        <h4>Listeners : @Model.GetListeners()</h4>
     </div>
 </div>
 @if(Model.Tracks.Count == 0)
@@ -36,12 +38,13 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (Track track in Model.Tracks ?? new List<Track>())
+            @foreach (Track track in Model.Tracks)
             {
                 <tr>
                     <td>@track.Rank</td>
-                    <td>@track.Name</td>
-                    <td>@track.Duration</td>
+                    <td>@Html.ActionLink(track.Name, "Track", "Home", 
+                       new { trackName = track.Name, artistName = Model.Artist.Name }, new { })</td>
+                    <td>@track.GetDuration()</td>
                 </tr>
             }
         </tbody>
