--- a/Cataloguer/Views/Home/ArtistProfile.cshtml
+++ b/Cataloguer/Views/Home/ArtistProfile.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="row">
-    <div class="col-sm-4 col-md-4 col-lg-4"><img width="100%" class="img-thumbnail" src="@Model.PictureLink" /></div>
+    <div class="col-sm-4 col-md-4 col-lg-4"><img width="100%" class="img-thumbnail" src="@Model.GetPictureLink()" /></div>
     <div class="col-sm-8 col-md-8 col-lg-8">
         <h1 class="text-center">@Model.Name</h1>
         <h5>
@@ -14,11 +14,11 @@
                 <code>@tag</code>
             }
         </h5>
-        <h4>Scrobbles : @Model.Scrobbles</h4>
-        <h4>Listeners : @Model.Listeners</h4>
-        @if (Model.ShortBiography != " ")
+        <h4>Scrobbles : @Model.GetScrobbles()</h4>
+        <h4>Listeners : @Model.GetListeners()</h4>
+        @if (Model.GetShortBiography() != " ")
         {
-            <p>@Model.ShortBiography</p>
+            <p>@Model.GetShortBiography()</p>
             <p>@Html.ActionLink("See more...", "ArtistBiography", "Home", new { name = Model.Name }, new { })</p>
         }  
     </div>
@@ -34,13 +34,14 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (Track track in Model.Tracks ?? new List<Track>())
+        @foreach (Track track in Model.Tracks)
         {
             <tr>
                 <td>@track.Rank</td>
-                <td>@track.Name</td>
-                <td>@track.Listeners</td>
-                <td>@track.Scrobbles</td>
+                <td>@Html.ActionLink(track.Name, "Track", "Home", 
+                   new { trackName = track.Name, artistName = Model.Name }, new { })</td>
+                <td>@track.GetListeners()</td>
+                <td>@track.GetScrobbles()</td>
             </tr>
         }
     </tbody>
@@ -51,7 +52,7 @@
 }
 <h2 class="text-center">Top albums</h2>
 <div class="flex-container">
-    @foreach (Album album in Model.Albums ?? new List<Album>())
+    @foreach (Album album in Model.Albums)
     {
         <div class="panel panel-default" style="flex-basis: 23%">
             <div class="panel-heading">
@@ -60,8 +61,12 @@
                         new { albumName = album.Name, artistName = Model.Name }, new { })
                 </p>
             </div>
-            <div class="panel-body"><img class="center-block" src="@album.PictureLink" /></div>
-            <div class="panel-footer"><span class="glyphicon glyphicon-headphones"></span>    @album.Scrobbles</div>
+            <div class="panel-body">
+                <img class="center-block" src="@album.GetPictureLink()" />
+            </div>
+            <div class="panel-footer">
+                <span class="glyphicon glyphicon-headphones"></span>    @album.GetScrobbles()
+            </div>
         </div>
     }
 </div>
