--- a/Cataloguer/Views/Home/TopArtists.cshtml
+++ b/Cataloguer/Views/Home/TopArtists.cshtml
@@ -9,6 +9,6 @@
                 @Html.ActionLink(artist.Name, "ArtistProfile", "Home", new { name = artist.Name }, new { })
             </p>
         </div>
-        <div class="panel-body"><img class="center-block" src="@artist.PictureLink" /></div>
+        <div class="panel-body"><img class="center-block" src="@artist.GetPictureLink()" /></div>
     </div>
 }
