--- a/Cataloguer/Views/Home/ArtistAllAlbums.cshtml
+++ b/Cataloguer/Views/Home/ArtistAllAlbums.cshtml
@@ -12,14 +12,14 @@
 <div class="flex-container">
     @foreach (Album album in Model.Albums)
     {
-        <div class="panel panel-default" style="flex-basis: 23%">
+        <div class="panel panel-default">
             <div class="panel-heading">
-                <p style="white-space: nowrap" class="text-center">
-                    @Html.ActionLink(album.Name, "Album", "Home", 
-                        new { albumName = album.Name, artistName = Model.Name }, new { })
-                </p>
+                <p class="text-center">@Html.ActionLink(album.Name, "Album", "Home", 
+                   new { albumName = album.Name, artistName = Model.Name }, new { })</p>
             </div>
-            <div class="panel-body"><img class="center-block" src="@album.GetPictureLink()" /></div>
+            <div class="panel-body">
+                <img class="center-block" src="@album.GetPictureLink()" />
+            </div>
             <div class="panel-footer">
                 <span class="glyphicon glyphicon-headphones"></span>    @album.GetScrobbles()
             </div>
