--- a/Cataloguer/Views/Home/Search.cshtml
+++ b/Cataloguer/Views/Home/Search.cshtml
@@ -15,13 +15,15 @@ else
     <div class="flex-container">
         @foreach (Artist artist in Model.Artists)
         {
-            <div class="panel panel-default" style="flex-basis: 23%">
+            <div class="panel panel-success">
                 <div class="panel-heading">
-                    <p class="text-center" style="white-space: nowrap">
+                    <p class="text-center">
                         @Html.ActionLink(artist.Name, "ArtistProfile", "Home", new { name = artist.Name }, new { })
                     </p>
                 </div>
-                <div class="panel-body"><img class="center-block" src="@artist.GetPictureLink()" /></div>
+                <div class="panel-body">
+                    <img class="center-block" src="@artist.GetPictureLink()" />
+                </div>
             </div>
         }
     </div>
@@ -36,14 +38,16 @@ else
     <div class="flex-container">
         @foreach (Album album in Model.Albums)
         {
-            <div class="panel panel-default" style="flex-basis: 23%">
+            <div class="panel panel-success">
                 <div class="panel-heading">
-                    <p style="white-space: nowrap" class="text-center">
+                    <p class="text-center">
                         @Html.ActionLink(album.Name, "Album", "Home", 
                        new { albumName = album.Name, artistName = album.Artist.Name }, new { })
                     </p>
                 </div>
-                <div class="panel-body"><img class="center-block" src="@album.GetPictureLink()" /></div>
+                <div class="panel-body">
+                    <img class="center-block" src="@album.GetPictureLink()" />
+                </div>
                 <div class="panel-footer">
                     <span class="glyphicon glyphicon-user"></span>    @Html.ActionLink(album.Artist.Name, 
                         "ArtistProfile", "Home", new { name = album.Artist.Name }, new { })
@@ -52,7 +56,6 @@ else
         }
     </div>
 }
-
 @if (Model.Tracks.Count == 0)
 {
     <h2 class="text-center">There are no tracks with this name</h2>
@@ -63,9 +66,9 @@ else
     <div class="flex-container">
         @foreach (Track track in Model.Tracks)
         {
-            <div class="panel panel-default" style="flex-basis: 23%">
+            <div class="panel panel-success">
                 <div class="panel-heading">
-                    <p style="white-space: nowrap" class="text-center">
+                    <p class="text-center">
                         @Html.ActionLink(track.Name, "Track", "Home",
                         new { trackName = track.Name, artistName = track.Artist.Name }, new { })
                     </p>
@@ -79,25 +82,4 @@ else
             </div>
         }
     </div>
-    <table class="table table-hover table-striped table-bordered">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Artist</th>
-                <th>Listeners</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (Track track in Model.Tracks)
-            {
-                <tr>
-                    <td>@Html.ActionLink(track.Name, "Track", "Home",
-                       new { trackName = track.Name, artistName = track.Artist.Name }, new { })</td>
-                    <td>@Html.ActionLink(track.Artist.Name, "ArtistProfile", "Home", 
-                       new { name = track.Artist.Name }, new { })</td>
-                <td>@track.GetListeners()</td>
-            </tr>
-            }
-        </tbody>
-    </table>
 }
