--- a/Cataloguer/Views/Home/TopArtists.cshtml
+++ b/Cataloguer/Views/Home/TopArtists.cshtml
@@ -3,12 +3,14 @@
 
 @foreach (Artist artist in Model)
 {
-    <div class="panel panel-default" style="flex-basis: 23%">
+    <div class="panel panel-success">
         <div class="panel-heading">
-            <p class="text-center" style="white-space: nowrap">
+            <p class="text-center">
                 @Html.ActionLink(artist.Name, "ArtistProfile", "Home", new { name = artist.Name }, new { })
             </p>
         </div>
-        <div class="panel-body"><img class="center-block" src="@artist.GetPictureLink()" /></div>
+        <div class="panel-body">
+            <img class="center-block" src="@artist.GetPictureLink()" />
+        </div>
     </div>
 }
