--- a/Cataloguer/Views/Home/Index.cshtml
+++ b/Cataloguer/Views/Home/Index.cshtml
@@ -8,14 +8,14 @@
 <div id="results" class="flex-container">
     @foreach (Artist artist in Model)
     {
-        <div class="panel panel-success">
+        <a class="panel panel-success" href="/Home/ArtistProfile?name=@artist.Name">
             <div class="panel-heading">
-                <p class="text-center">
-                    @Html.ActionLink(artist.Name, "ArtistProfile", "Home", new { name = artist.Name }, new { })
-                </p>
+                <p class="text-center">@artist.Name</p>
             </div>
-            <div class="panel-body"><img class="center-block" src="@artist.GetPictureLink()" /></div>
-        </div>
+            <div class="panel-body">
+                <img class="img-rounded center-block" src="@artist.GetPictureLink()" />
+            </div>
+        </a>
     }
 </div>
 <img id="loading" class="center-block" src="~/Content/loading.gif" />
